--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,7 +27,7 @@ a {
   }
 }
 
-.card {
+/* .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 97%;
@@ -37,7 +37,7 @@ a {
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
+} */
 
 .container {
   padding: 2px 16px;
@@ -45,17 +45,22 @@ a {
 
 .details-page-area{
   background-color:#F3F4F8;
-  min-height: 100vh;
+ 
 
+}
+
+.blog-head-title{
+  font-size: 57px;
 }
 
 .details-page-left-side-wrapper{
   background-color: #FFFFFF;
   margin-top: 20px;
-  width: 100%;
-  min-height: 80vh;
+  width: 98%;
+  min-height: 100vh;
   border-radius: 5px;
   padding: 20px 20px;
+  margin-bottom: 20px;
 
 
 }
@@ -64,15 +69,16 @@ a {
   border-radius: 5px;
 
   margin-top: 20px;
-  min-height: 80vh
+  min-height: 100vh;
+  margin-bottom: 20px;
 
 }
 /* .details-page-left-side-wrapper .post-details {
   padding: 20px 20px;
 } */
 .details-page-left-side-wrapper .post-details  h3 {
-  font-size: 40px;
-  line-height: 45px;
+  font-size: 32px;
+  line-height: 42px;
   font-weight: 500;
   font-family: serif;
 
@@ -128,6 +134,11 @@ a {
   font-family: "Poppins" !important;
 }
 
+.post-card-area{
+  background-color: #F3F4F8;
+  margin-bottom: 30px;
+}
+
      /*============================================
                MenuBar
 ============================================== */
@@ -145,9 +156,7 @@ a {
 color: #1BB372;
 }
 
-.menubar-content ul {
-margin-top: 13px;
-}
+
 
 .menubar-content ul li:last-child {
   margin-right: 0;
@@ -166,11 +175,232 @@ padding-bottom: 20px;
 } */
 
 .menubar-logo img {
-height: 95px;
+  height: 74px;
+  margin-top: 6px;
+  margin-bottom: 0px;
+}
 
-margin-top: 14px;
+
+.blog-footer-area{
+  height: 300px;
+  
+}
+
+  
+     /*============================================
+               TopMenuBar
+============================================== */
+.top-menu-bar-content ul{
+  display: flex;
+}
+
+
+.top-menu-bar-content-title h6{
+margin-bottom: 27px;
+margin-top: 13px;
+font-size: 26px;
+line-height: 36px;
+}
+
+.top-menu-bar-content-title{
+line-height: 30px;
+
+padding: 135px 0px 50px 0px;
+
+
 }
 
 
 
 
+.top-menu-bar-content-title button i{
+
+margin-left: 10px;
+}
+
+.top-menu-bar-logo{
+  display: flex;
+}
+.top-menu-bar-logo h2 {
+  margin-top: 30px;
+  margin-left: 20px;
+}
+.top-menu-bar-logo img {
+margin-right: 10px;
+  margin-top: 23px;
+  margin-bottom: 23px;
+}
+
+.top-menu-bar-logo-two img{
+height: 51px;
+margin-top: 23px;
+margin-bottom: 23px;
+}
+
+.top-menu-bar-content ul{
+  display: flex;
+  justify-content: right;
+
+
+}
+.top-menu-bar-content-two ul{
+display: flex;
+justify-content: right;
+
+
+}
+
+.top-menu-bar-content ul li {
+  text-align: center;
+  cursor: pointer;
+  list-style: none;
+  font-size: 17px;
+  text-align: center;
+  cursor: pointer;
+  font-size: 17px;
+  font-weight: 500;
+  color: black;
+  text-decoration: none;
+  transition: all .3s linear;
+  border-radius: 4px;
+}
+
+.footer-area-lnk-clr{
+  padding: 20px;
+}
+
+
+.mobile-btn{
+display: none;
+}
+
+.top-menu-bar-content-two ul li{
+text-align: center;
+cursor: pointer;
+font-size: 17px;
+text-align: center;
+cursor: pointer;
+font-size: 17px;
+font-weight: 500;
+text-decoration: none;
+transition: all .3s linear;
+border-radius: 4px;
+padding: 11px 10px;
+color: black;
+}
+
+.top-menu-bar-content-two-lnk-clr{
+color: black;
+}
+
+.top-menu-bar-content-two-lnk-clr:hover{
+color: aliceblue;
+}
+
+.top-menu-bar-content-two ul Link{
+padding: 27px;
+text-align: center;
+cursor: pointer;
+color: black;
+font-weight: bold;
+border: none;
+}
+.top-menu-bar-content-two ul li Link {
+color: aliceblue;
+}
+
+.top-menubar-item-clr{
+color: aliceblue;
+}
+
+.top-menubar-item-clr:hover{
+color: navy;
+margin-top: -3px;
+
+}
+
+
+
+.top-menu-bar-content-two ul li:hover{
+background-color: #FF1901;
+color: aliceblue;
+}
+
+.navbar-login{
+background-color: #FF1901;
+color: aliceblue;
+margin-left: 10px;
+}
+
+/* .navbar-area{
+margin-top: -5px;
+} */
+
+
+
+
+
+
+.top-menu-bar-area{
+  background-image: url("/public/img/lds-banner.png");
+  padding-bottom: 15px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: aliceblue;
+
+}
+
+.top-menu-bar-content-title button {
+  width: 200px;
+  height: 60px;
+  background-color: #FF1901;
+  border: none;
+  color: aliceblue;
+  margin-top: 23px;
+}
+
+
+
+
+
+.top-menu-bar-content-title h1 {
+font-size: 44px;
+line-height: 56px;
+font-weight: 700;
+
+}
+
+.top-menu-bar-content-item{
+margin-top: 70px;
+}
+
+
+
+.top-menubar-item-wrapper{
+margin-top: 65px;
+}
+
+.top-menu-bar-content-item ul{
+display: flex;
+margin-top: 27px;
+
+
+}
+
+.top-menu-bar-content-item ul li{
+list-style: none;
+padding-right: 78px;
+padding-left: 97px;
+
+
+}
+.comment-section-area{
+  background-color: #FFFFFF;
+  margin-top: 20px;
+  width: 98%;
+  min-height: 80vh;
+  border-radius: 5px;
+  padding: 20px 20px;
+  margin-bottom: 20px;
+}
