--- a/styles/globals.css
+++ b/styles/globals.css
@@ -174,6 +174,11 @@ padding-top: 20px;
 padding-bottom: 20px;
 } */
 
+.dna-wrapper-area{
+  display: flex;
+  justify-content: center;
+}
+
 .menubar-logo img {
   height: 74px;
   margin-top: 6px;
@@ -403,4 +408,10 @@ padding-left: 97px;
   border-radius: 5px;
   padding: 20px 20px;
   margin-bottom: 20px;
+}
+
+.deshboard-area{
+  min-height: 100vh;
+  background-color: #F3F4F8;
+  padding-top: 40px;
 }
