--- a/styles/globals.css
+++ b/styles/globals.css
@@ -415,3 +415,37 @@ padding-left: 97px;
   background-color: #F3F4F8;
   padding-top: 40px;
 }
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 70%;
+  padding: 20px;
+}
+.card-profile-post-section{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 100%;
+  padding: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+
+.inputsearch{
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  height: 60px;
+  width: 373px;
+  padding-left: 20px;
+}
+
+
